# quick_projects

./: .gitignore
quick_chat/: Makefile  tcp_client.cpp  tcp_server.cpp
quick_chat_epoll/: Makefile  quick_chat_client.cpp  quick_chat_server.cpp
quick_cli_snake/: README.md  snake.cpp
quick_db_tools/: dbtools.py
quick_hashmap/: Makefile  quick_hashmap.cpp
quick_roaring_bitmap/: CMakeLists.txt  barking_bitmap.hpp  readme.md
quick_roaring_bitmap/include/: barking_bitmap.hpp
quick_roaring_bitmap/src/: barking_bitmap_tests.cpp
quick_telegram_downloader/: bot.py  config.py
